# voice_speech_activity_detection_application

./: .dockerignore  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  KULLANIM.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
cli/: analyze.py
client/: capture.py  main.py  rtp_sender.py  sip_uac.py  wav_source.py
client/static/: index.html
scripts/: fetch_models.sh  fetch_noise.sh  make_noisy_wavs.py  make_sample_library.py  make_test_wavs.py
server/: analysis.py  calls.py  client_supervisor.py  config.py  engines_state.py  main.py  native.py  softphone.py
server/api/: http.py  ws.py
server/audio/: peaks.py  wav_io.py  wav_writer.py
server/enhance/: base.py  manager.py  registry.py
server/enhance/engines/: arf_enhance.py  deepfilter.py  rnnoise.py
server/rtp/: g711.py  packet.py  receiver.py
server/sessions/: store.py
server/sip/: message.py  sdp.py  uas.py
server/static/: app.js  index.html  style.css  timeline.js
server/vad/: base.py  registry.py  runner.py  segments.py
server/vad/engines/: arf_vad.py  silero_vad.py  ten_vad.py  ten_vad_df.py  ten_vad_rnn.py  unimrcp_vad.py
tests/: test_adapter.py  test_client_supervisor.py  test_df_enhance.py  test_e2e_sip.py  test_engines_offline.py  test_enhance.py  test_g711.py  test_noise_robustness.py  test_reanalyze.py  test_rnnoise_enh.py  test_rtp.py  test_segments.py  test_sip.py  test_softphone_proxy.py  test_upload.py  test_wav_io.py
tests/fixtures/: NOISE_LICENSE.md  noisy_snr15.json  noisy_snr5.json  pattern1.json  speech.json
