[project]
name = "vad-comparison"
version = "0.1.0"
description = "Plugin-based voice/speech activity detection comparison application (SIP softphone + pluggable VAD engines + timeline UI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "soxr>=0.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "onnxruntime>=1.18",
]

[project.optional-dependencies]
ten = ["ten-vad"]
client = ["sounddevice>=0.4.7"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
vad-server = "server.main:main"
vad-client = "client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
